falta hacer el backend de cambiar el correo

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -68,18 +68,12 @@
                         </section>
                         <section id="modifyUserDataSection">
                             <p>
-                                <span class="text" txt="username"></span>:<br>
-                                <b><span id='usernameSpace'></span></b>
+                                <span class="text" txt="email"></span>:
                             </p>
                             <p>
-                                <span class="text" txt="email"></span>:<br>
                                 <b><span id="emailSpace"></span></b>
                             </p>
-                            <p>
-                                <span class="text" txt="password"></span>:<br>
-                                <b><span id="passwordSpace"></span></b>
-                            </p>
-                            <button class='greenButton text' id="toChangeDataMenuButton" txt="modifyThisData"></button>
+                            <button class='greenButton text' id="toChangeDataMenuButton" txt="changeEmail"></button>
                         </section>
                         <section id="logOutSection">
                             <button class='greenButton text' id="logOutInAllMenuButton" txt="logOutInAll"></button>
@@ -180,17 +174,8 @@
                 <div id="changeDataMenu" hidden>
                     <h1 class="text" txt="modifyData"></h1>
                         <section>
-                            <h2 class="text" txt="username"></h2>
-                            <p><input type="text" id="changeUsernameField" placeholder=""></p>
-                        </section>
-                        <section>
                             <h2 class="text" txt="email"></h2>
                             <p><input type="text" id="changeEmailField" placeholder=""></p>
-                        </section>
-                        <section>
-                            <h2 class="text" txt="password"></h2>
-                            <p><input type="password" id="changePasswordField" placeholder=""></p>
-                            <p><input type="password" id="comprobePasswordField" placeholder="Comprueba la contraseña"></p>
                         </section>
                         <section>
                             <button class="greenButton text" id="saveChangeDataMenu" txt="saveChanges"></button>
