empezando el backend de cambiar el correo

--- a/backend/emailPresets/changeEmail.html
+++ b/backend/emailPresets/changeEmail.html
@@ -98,10 +98,10 @@
             <b>Notas</b>
         </div>
         <h2 class=" ThingText">
-            Modificar datos de su cuenta
+            Código para cambiar de correo electrónico:
         </h2>
         <div class=" ThingData">
-            La cuenta anteriormente vinculada al correo electrónico <b>{OLD_EMAIL_HERE}</b> cambiará a esta dirección. Para confirmar la operación introduzca este código en la aplicación:
+            Ingrese este código en la <b>casilla {NUMBER_HERE}</b>
         </div>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
