siguiendo con lo de cambiar correo

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -186,12 +186,15 @@
                 <div id="changeDataEmailCodeMenu" hidden>
                     <h1 class="text" txt="checkYourEmail"></h1>
                         <section>
-                            <span class="text" txt="codeWeSent"></span>
-                            <b><span id="changeDataEmailSent"></span></b>
+                            <span class="text" txt="codesWeSent"></span>
+                            <b id="changeDataEmailSent"></b>
+                            <span class="text" txt="and"></span>
+                            <b id="changeDataEmailSent2"></b>
                         </section>
                         <section>
-                            <h2 class="text" txt="enterTheCode"></h2>
-                            <p><input type="text" id="changeDataConfirmCode" placeholder="A1B2C" maxlength="5"></p>
+                            <h2 class="text" txt="enterTheCodes"></h2>
+                            <p><input type="text" id="changeDataConfirmCode" maxlength="5"></p>
+                            <p><input type="text" id="changeDataConfirmCode2" maxlength="5"></p>
                             <button class="greenButton text" id="changeDataConfirmCodeButton" txt="verify"></button>
                         </section>
                 </div>
