quería cambiar los iconos pero css me quitó todas las ganas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
         <link rel='stylesheet' type='text/css' href='css/leftBar.css'>
         <link rel='stylesheet' type='text/css' href='css/textArea.css'>
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
-        <link rel="shorcut icon" type="image/svg" href="img/favicon.svg">
+        <link rel="shorcut icon" type="image/svg" href="img/clip-green.svg">
 
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"> </script>
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -124,7 +124,7 @@
                 <article id='noteSection'>
                     <section id='topBar'>
                         <span id='leftToTheNoteNameButtons'>
-                            <button class='bg-green' id='showNotesListButton'><img id='menuImg' src='img/menu.png'></button>
+                            <button class='bg-green' id='showNotesListButton'><img id='menuImg' src='img/hamburguer2.svg'></button>
                         </span>
                         <div id='topBarText'>
                             <b id='noteName'>
@@ -132,10 +132,10 @@
                             </b>
                             <span id='sayThings'></span>
                             <span id='topBarButtons' hidden>
-                                <button class='bg-green' id='renameButton' alt='Renombrar nota' title='Renombrar nota'><img id='renameImg' src='img/rename.png'></button>
-                                <button class='bg-green' id='downloadButton' alt='Descargar nota' title='Descargar nota'><img id='downloadImg' src='img/download.png'></button>
-                                <button class='bg-green' id='saveButton' alt='Guardar nota' title='Guardar nota'><img id='saveImg' src='img/save.png'></button>
-                                <button class='bg-red' id='deleteButton' alt='Borrar nota' title='Borrar nota'><img id='deleteImg' src='img/delete.png'></button>
+                                <button class='bg-green' id='renameButton' alt='Renombrar nota' title='Renombrar nota'><img id='renameImg' src='img/pencil.svg'></button>
+                                <button class='bg-green' id='downloadButton' alt='Descargar nota' title='Descargar nota'><img id='downloadImg' src='img/download.svg'></button>
+                                <button class='bg-green' id='saveButton' alt='Guardar nota' title='Guardar nota'><img id='saveImg' src='img/save.svg'></button>
+                                <button class='bg-red' id='deleteButton' alt='Borrar nota' title='Borrar nota'><img id='deleteImg' src='img/delete.svg'></button>
                             </span>
                         </div>
                     </section>
