iconos cambiados, otra vez

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,10 +123,10 @@
                 </aside>
                 <article id='noteSection'>
                     <section id='topBar'>
-                        <span id='leftToTheNoteNameButtons'>
-                            <button class='bg-green' id='showNotesListButton'><img id='menuImg' src='img/hamburguer2.svg'></button>
-                        </span>
                         <div id='topBarText'>
+                            <span id='leftToTheNoteNameButtons'>
+                                <button class='bg-green' id='showNotesListButton'><img id='menuImg' src='img/hamburger.svg'></button>
+                            </span>
                             <b id='noteName'>
                                 <span class="text" txt="clickANote"></span>
                             </b>
@@ -134,7 +134,7 @@
                             <span id='topBarButtons' hidden>
                                 <button class='bg-green' id='renameButton' alt='Renombrar nota' title='Renombrar nota'><img id='renameImg' src='img/pencil.svg'></button>
                                 <button class='bg-green' id='downloadButton' alt='Descargar nota' title='Descargar nota'><img id='downloadImg' src='img/download.svg'></button>
-                                <button class='bg-green' id='saveButton' alt='Guardar nota' title='Guardar nota'><img id='saveImg' src='img/save.svg'></button>
+                                <button class='bg-green' id='saveButton' alt='Guardar nota' title='Guardar nota'><img id='saveImg' src='img/upload.svg'></button>
                                 <button class='bg-red' id='deleteButton' alt='Borrar nota' title='Borrar nota'><img id='deleteImg' src='img/delete.svg'></button>
                             </span>
                         </div>
