esconder el botón de crear cuenta si no se pudo conectar con el servidor

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,9 @@
                     <div>
                         <button class='loginScreenButton1 text' id='loginButton' txt="login"></button>
                     </div>
+                    <div>
+                        <button class='loginScreenButton2 text' id='signUpButton' txt="createAccount"></button>
+                    </div>
                 </section>
                 <section id="loadLoginSection">
                     <div>
@@ -93,13 +96,7 @@
                     <button class="loginScreenButton2 text" id="reloadLoginButton" txt="reload"></button>
                 </section>
                 <section>
-                    <button class='loginScreenButton2' id='signUpButton'>
-                        <span class="text" txt="createAccount"></span>
-                    </button>
-                    <br>
-                    <button id='localModeButton' class='loginScreenButton2'>
-                        <span class="text" txt="localMode"></span>
-                    </button>
+                    <button id='localModeButton' class='loginScreenButton2 text' txt="localMode"></button>
                 </section>
             </div>
         </div>
