--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
         <link rel='stylesheet' type='text/css' href='css/leftBar.css'>
         <link rel='stylesheet' type='text/css' href='css/textArea.css'>
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
-        <link rel="shorcut icon" type="image/svg" href="img/clip-green.svg">
+        <link rel="shorcut icon" type="image/svg" href="img/pencil-green.svg">
 
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"> </script>
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
