--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,9 @@
 
         <div id='noteScreen' hidden>
             <nav id="nav">
-                <b><span class="text" txt="noteAppName"></span></b>
+                <b>
+                    <span class="text" txt="noteAppName"></span>
+                </b>
                 <button id='menuButton' class="text" txt="localMode"></button>
             </nav>
             <div id='allContainer'>
@@ -111,9 +113,6 @@
                     <div id='leftBarTitle'>
                         <b><span class="text" txt="yourNotes"></span></b>
                         <img id="newNote">
-                        <!--button id='newNote'>
-                            <span class="text" txt="create"></span>
-                        </button-->
                     </div>
                     <div id='youDontHaveNotes'>
                         <span class="text" txt="youDontHaveNotes"></span>
