emails en inglés

--- a/backend/emailPresets/changeEmail-es.html
+++ b/backend/emailPresets/changeEmail-es.html
@@ -98,10 +98,10 @@
             <b>Notas</b>
         </div>
         <h2 class=" ThingText">
-            Código para cambiar de correo electrónico:
+            Cambiar correo electrónico
         </h2>
         <div class=" ThingData">
-            Ingrese este código en la <b>casilla {NUMBER_HERE}</b>
+            Ingrese este código en la <b>casilla {NUMBER_HERE}</b> para cambiar el correo electrónico de su cuenta:
         </div>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
@@ -109,7 +109,7 @@
             </span>
         </div>
         <div class=" ThingFootText">
-            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar el cambio de los datos mostrados anteriormente en una cuenta de usuario. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
+            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar el cambio de correo electrónico de una cuenta de usuario.
         </div>
         </div>
     </body>
