--- a/backend/emailPresets/deleteAccountEmail-en.html
+++ b/backend/emailPresets/deleteAccountEmail-en.html
@@ -17,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet"> 
         <style>
             .loginScreenBigName
             {
@@ -99,10 +99,10 @@
             <b>Notes</b>
         </div>
         <h2 class=" ThingText">
-            Login
+            Delete account
         </h2>
         <div class=" ThingData">
-            Enter this code to log in:
+            The account linked to the email <b>{EMAIL_HERE}</b> will be deleted. To confirm the operation enter this code in the application:
         </div>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
@@ -110,7 +110,7 @@
             </span>
         </div>
         <div class=" ThingFootText">
-            This code was sent from <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> to log in.
+            This code was sent from <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> to confirm the closure of an account.
         </div>
         </div>
     </body>
