--- a/backend/emailPresets/signUpMail-en.html
+++ b/backend/emailPresets/signUpMail-en.html
@@ -17,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap" rel="stylesheet"> 
         <style>
             .loginScreenBigName
             {
@@ -90,27 +90,28 @@
             {
                 color: #53b56a;
             }
+
         </style>
     </head>
     <body>
         <div class=" ThingContainer">
-        <div class=' loginScreenBigName'>
-            <b>Notas</b>
-        </div>
-        <h2 class=" ThingText">
-            Borrar cuenta
-        </h2>
-        <div class=" ThingData">
-            La cuenta vinculada al correo electrónico <b>{EMAIL_HERE}</b> será eliminada. Para confirmar la operación introduzca este código en la aplicación:
-        </div>
-        <div class=" ThingCodeBox">
-            <span class=" ThingCodeHere">
-                <b>{CODE_HERE}</b>
-            </span>
-        </div>
-        <div class=" ThingFootText">
-            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar el cierre de una cuenta. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
-        </div>
+            <div class=' loginScreenBigName'>
+                <b>Notes</b>
+            </div>
+            <h2 class=" ThingText">
+                Create account
+            </h2>
+            <div class=" ThingData">
+                Enter this code to create an account:
+            </div>
+            <div class=" ThingCodeBox">
+                <span class=" ThingCodeHere">
+                    <b>{CODE_HERE}</b>
+                </span>
+            </div>
+            <div class=" ThingFootText">
+                This code was sent from <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> to confirm the creation of a user account.
+            </div>
         </div>
     </body>
 </html>
