--- a/backend/emailPresets/changeEmail-en.html
+++ b/backend/emailPresets/changeEmail-en.html
@@ -17,16 +17,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet"> 
         <style>
-            .ThingContainer
-            {
-                --green: #53b56a;
-                --green-hover: #479b5b;
-                --gray: #eeeeee;
-                --rubik: 'Rubik', sans-serif;
-            }
-
             .loginScreenBigName
             {
                 font-size: 4rem;
@@ -66,7 +58,7 @@
                 font-family: #53b56a;
                 text-align: center;
                 color: white;
-                font-family: 'Roboto Mono', monospace;
+                font-family: 'Anonymous Pro', monospace;
             }
 
             .ThingFootText
@@ -82,6 +74,18 @@
                 word-wrap: break-word;
             }
 
+            .ThingData
+            {
+                font-family: 'Rubik', sans-serif;
+                font-size: 1rem;
+                text-align: center;
+                color: #000000;
+                background-color: #eeeeee;
+                border-radius: 10px;
+                padding: 0.7rem;
+                margin: 0.5rem;
+            }
+
             a
             {
                 color: #53b56a;
@@ -91,18 +95,21 @@
     <body>
         <div class=" ThingContainer">
         <div class=' loginScreenBigName'>
-            <b>Notas</b>
+            <b>Notes</b>
         </div>
         <h2 class=" ThingText">
-            El código para crear su cuenta:
+            Change email
         </h2>
+        <div class=" ThingData">
+            Enter this code in the <b>box {NUMBER_HERE}</b> to change your account email address:
+        </div>
         <div class=" ThingCodeBox">
             <span class=" ThingCodeHere">
                 <b>{CODE_HERE}</b>
             </span>
         </div>
         <div class=" ThingFootText">
-            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar la creación de una cuenta de usuario. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
+            This code was sent from <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> to confirm the change of e-mail address of a user account.
         </div>
         </div>
     </body>
