--- a/backend/emailPresets/signUpMail-es.html
+++ b/backend/emailPresets/signUpMail-es.html
@@ -17,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap" rel="stylesheet"> 
         <style>
             .loginScreenBigName
             {
@@ -90,48 +90,28 @@
             {
                 color: #53b56a;
             }
+
         </style>
     </head>
     <body>
         <div class=" ThingContainer">
-        <div class=' loginScreenBigName'>
-            <b>Notas</b>
-        </div>
-        <h2 class=" ThingText">
-            Modificar datos de su cuenta
-        </h2>
-        <div class=" ThingData">
-            Los datos de su cuenta serán actualizados y quedarán de la siguiente manera:
-            <div>
-                <p>
-                    <h2>
-                        Nombre de usuario
-                    </h2>
-                    <div><b>{USERNAME_HERE}</b></div>
-                </p>
-                <p>
-                    <h2>
-                        Correo electrónico
-                    </h2>
-                    <div><b>{EMAIL_HERE}</b></div>
-                </p>
-                <p>
-                    <h2>
-                        Contraseña
-                    </h2>
-                    <div><b>{PASSWORD_HERE}</b></div>
-                </p>
-                Para confirmar los cambios, introduzca el código de abajo en la aplicación.
+            <div class=' loginScreenBigName'>
+                <b>Notas</b>
             </div>
-        </div>
-        <div class=" ThingCodeBox">
-            <span class=" ThingCodeHere">
-                <b>{CODE_HERE}</b>
-            </span>
-        </div>
-        <div class=" ThingFootText">
-            Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar el cambio de los datos mostrados anteriormente en una cuenta de usuario. Si usted no solicitó este correo electrónico no es necesario que haga absolutamente nada.
-        </div>
+            <h2 class=" ThingText">
+            Crear cuenta
+            </h2>
+            <div class=" ThingData">
+                Ingrese este código para crear una cuenta:
+            </div>
+            <div class=" ThingCodeBox">
+                <span class=" ThingCodeHere">
+                    <b>{CODE_HERE}</b>
+                </span>
+            </div>
+            <div class=" ThingFootText">
+                Este código fue enviado desde <a href="http://idko.infinityfreeapp.com/notas">http://idko.infinityfreeapp.com/notas</a> para confirmar la creación de una cuenta de usuario.
+            </div>
         </div>
     </body>
 </html>
